Fixed z-index

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -24,6 +24,7 @@ html
     position: fixed
     bottom: 30px
     left: calc(50% -100px)
+    z-index: 1
 
 .taken
     height: 100px!important
